# paladin

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
conf/: default.yaml  simple-clf.yaml  simple-reg.yaml  simple-surv.yaml
conf/nn/: cox.yaml  joint.yaml  jointbb.yaml  simple_clf.yaml  simple_reg.yaml  simple_surv.yaml
conf/nn/data/: joint_optimus_cdsi.yaml  simple_clf.yaml  simple_reg.yaml  simple_surv.yaml
conf/nn/module/: cox.yaml  joint.yaml  jointbb.yaml
conf/nn/module/model/: acontextual.yaml  site.yaml
conf/nn/module/model/encoder_cfg/: attn_mil.yaml  flash.yaml  flash1024.yaml  flash3.yaml  flash4.yaml  pass_through.yaml
conf/nn/module/optimizer/: adamw2e5.yaml  adamw5e2.yaml  adamw5e3.yaml  adamw5e4.yaml  adamw5e5.yaml  sgd.yaml
conf/train/: cox.yaml  joint.yaml  jointbb.yaml
scripts/: synthesize_workshop_data.py
src/paladin/: infer_aeon.py  infer_paladin.py  run.py
src/paladin/data/: aeon_datamodule.py  dataset.py  functional.py  inference_dataset.py  joint_datamodule.py
src/paladin/modules/: backbone.py  config.py  module.py  transformer.py
src/paladin/pl_modules/: callbacks.py  joint.py
src/paladin/ui/: run.py
src/paladin/utils/: custom_nonetype.py  data_prep.py  data_validation.py  embeddings.py  setup_aeon_dataset.py  setup_simple_dataset.py  stats.py
tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_resume.py
