[metadata]
name = paladin
description = H&E WSI biomarker inference to predict treatment effects.
url = https://github.com/kmboehm/paladin
long_description = file: README.md
author = Kevin Boehm
author_email = boehmk@mskcc.org
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    # nn-template-core provides the nn_core module but pins lightning==2.0.*
    # which is incompatible with pytorch-lightning==2.3.0.
    # Install it separately with --no-deps (see README).
    # nn-template-core==0.4.*

    # Core ML framework (must match mamba env; the 'lightning' package provides
    # both 'lightning.pytorch' and the 'pytorch_lightning' compat namespace)
    lightning==2.3.0
    torchmetrics==1.4.2
    hydra-core>=1.3
    omegaconf
    wandb

    # Add project specific dependencies
    streamlit

    # Stable stuff usually backward compatible
    setuptools<81
    h5py
    pandas
    scipy
    scikit-learn
    matplotlib
    seaborn
    statsmodels
    Pillow
    rich
    dvc
    python-dotenv
    stqdm
    webdataset
    lifelines

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
